PJ-2008-03-20-0: Bugfix.:     Advanced Query with wild card character * does not produce correct results.
                 Enhancem.:   The SQLQueryResultsets is following the names from the database row set meta data.
                 Enhancem.:   The lifecycle of the SQLQueryResultsets is optimised. Passivate is being called in finally
                 Enhancem.:   Unused statements and results pro ArcoDbConnection is removed
                 Enhancem.:   The arco.xsd is reorganised. The related parts are moved together. 
                 Bugster:     6511009
                 Review:      LP

LP-2008-03-18-1: Bugfix.:     Fixed typo from LP-2008-03-18-0
                 Review:      JO

LP-2008-03-18-0: Enhancem.:   Added useful message for users when startup fails 
                              with SMF
                 Review:      JO

AP-2008-03-17-0: Bugfix:      Fix of incorrect usage summary for larger databases.
                 Enhancem.:   ARCo reporting installation - get all required SWC
                              information for installation.
                 Review:      JO, LP

PJ-2008-03-03-0: Bugfix:      Validation of the Filter List in Simple Query builder fails
                 Bugfix:      Row Limit in ARCo Simple Query builder cannot be empty
                 Bugster:     6670264, 6661461 
                 Review:      JO

PJ-2008-02-29-0: Bugfix:      Row Limit in ARCo Simple Query builder cannot be empty
                 Bugster:     6661461
                 Review:      JO

PJ-2008-02-28-0: Bugfix:      Sort order and row limit cannot be specified together in ARCo Simple Query builder
                 Bugster:     6661470
                 Review:      JO

JO-2008-02-28-0: Enhancem.:   Enhanced reporting test SQLGeneratotTest
                 Review:      PJ

JO-2008-02-27-0: Bugfix:      Fixed commit JO-2008-02-22-0 to work with arcorun
                 Review:      PJ
