@@ -151,14 +151,14 @@ public abstract class QueryResult implements java.io.Serializable {
             row = createValuesForNextRow() ) {
             rows.add(row);
          }
+         fireRowCountChanged(getRowCount());
       } finally {
          passivate();
       }
       if( SGELog.isLoggable(Level.FINE)) {
          double sec = (((double)System.currentTimeMillis()) - start) / 1000;
          SGELog.fine("query executed in {0}s", new Double(sec));
-      }
-      fireRowCountChanged(getRowCount());
+      }  
    }
    
    
