@@ -1,4 +1,11 @@
-PJ-2008-03-20-0: Bugfix.:     Advanced Query with wild card character * does not produce correct results.
+PJ-2008-03-27-0: Bugfix:      Latebindings for Advanced Queries does not work
+                 Bugster:     6677885
+                 Issue:       2529
+                 Bugfix:      Repaired object synchronization in ArcoServlet
+                 Bugfix:      Fixed online help for advance query latebindings
+                 Review:      JO 
+
+PJ-2008-03-20-0: Bugfix:      Advanced Query with wild card character * does not produce correct results.
                  Enhancem.:   The SQLQueryResultsets is following the names from the database row set meta data.
                  Enhancem.:   The lifecycle of the SQLQueryResultsets is optimised. Passivate is being called in finally
                  Enhancem.:   Unused statements and results pro ArcoDbConnection is removed
@@ -6,7 +13,7 @@ PJ-2008-03-20-0: Bugfix.:     Advanced Query with wild card character * does not
                  Bugster:     6511009
                  Review:      LP
 
-LP-2008-03-18-1: Bugfix.:     Fixed typo from LP-2008-03-18-0
+LP-2008-03-18-1: Bugfix:      Fixed typo from LP-2008-03-18-0
                  Review:      JO
 
 LP-2008-03-18-0: Enhancem.:   Added useful message for users when startup fails 
